# sdl-test

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  start.sh
src/: game.cpp  game.h  main.cpp
